--- a/track-your-expenses/src/App.css
+++ b/track-your-expenses/src/App.css
@@ -23,3 +23,119 @@ main {
   outline: none;
   border: none;
 }
+
+
+.expense-tracker {
+  display: flex;
+  gap: 32px;
+}
+
+.expense-form {
+  width: 100%;
+}
+
+.expense-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.expense-table select {
+  font: inherit;
+  width: 100%;
+  border: none;
+  outline: none;
+}
+
+.amount-column div {
+  display: flex;
+}
+
+.amount-column span {
+  margin-right: 6px;
+}
+
+.arrow {
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.up-arrow {
+  margin-left: auto;
+}
+
+.up-arrow:active {
+  transform: translateY(-2px);
+}
+
+.down-arrow {
+  margin-left: 6px;
+}
+
+.down-arrow:active {
+  transform: translateY(2px);
+}
+
+.expense-table th,
+.expense-table td {
+  border: 1px solid #444;
+  text-align: left;
+  padding: 4px 8px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+}
+
+.input-container label {
+  font-size: 14px;
+}
+
+.input-container input {
+  height: 28px;
+  font-family: inherit;
+}
+
+.error {
+  color: red;
+  margin: auto;
+}
+
+.add-btn {
+  width: 100%;
+  height: 32px;
+  font-size: 18px;
+  font-family: inherit;
+  margin-top: 8px;
+}
+
+.context-menu {
+  background-color: white;
+  border: 1px solid;
+  position: absolute;
+  display: none;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+}
+
+.context-menu div {
+  padding: 2px 8px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.context-menu div:hover {
+  background-color: #ddd;
+}
+
+@media (max-width: 900px) {
+  body {
+      margin-inline: 16px;
+  }
+
+  .expense-tracker {
+      flex-direction: column;
+  }
+}
