style: style the 'ExpenseForm', 'InputField', and 'SelectInputField' components

--- a/track-your-expenses/src/index.css
+++ b/track-your-expenses/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Nunito:wght@300;400;600;700;800;900&family=Russo+One&family=Spartan:wght@700;800;900&display=swap");
+
 :root {
   color-scheme: light dark;
   /* color: rgba(255, 255, 255, 0.87);
@@ -9,10 +11,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 body {
-  min-width: 320px;
-  min-height: 100vh;
+  font-family:  "Nunito", sans-serif;
 }
+
+#root {
+  max-width: 1280px;
+  width: 100%;
+  /* margin: 0 auto; */
+  padding: 2rem;
+  text-align: center;
+  background-color: var(--bg-clr);
+  color: #fff;
+
+  --text-clr: #f7f7f7;
+  --input-bg-clr: #7575a4;
+  --bg-clr: #0e0a39;
+}
+
+
 
 
