--- a/track-your-expenses/src/App.css
+++ b/track-your-expenses/src/App.css
@@ -1,20 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Nunito:wght@300;400;600;700;800;900&family=Russo+One&family=Spartan:wght@700;800;900&display=swap");
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  background-color: #0e0a39;
-  color: #fff;
-
-  --text-clr: #f7f7f7;
-  --input-bg-clr: #c2f8ae6c;
-}
-
-body {
-  font-family:  "Nunito", sans-serif;
-  margin: 0 32px;
-}
 
 main {
   max-width: 900px;
@@ -29,6 +12,73 @@ main {
   border: none;
 }
 
+.heading {
+  position: relative;
+  overflow: hidden;
+  font-size: 2rem;
+  line-height: 2.1rem;
+  margin:0 auto 1rem;
+  padding: 0 0.5rem;
+  width: max-content;
+}
+.heading::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-left: 1px solid;
+  color: var(--text-clr);
+  background-color: var(--bg-clr);
+  z-index: 1;
+  animation: text-animation 4s steps(20) alternate forwards;
+  animation-iteration-count: calc(20);
+  animation-play-state: running;
+}
+
+@keyframes text-animation {
+  to{
+    inset: 0 0 0 105%;
+  }
+}
+
+
+select,
+option {
+  cursor: pointer;
+}
+
+
+/* :where(input[type="number"], input[type="text"]):not(:placeholder-shown) { */
+/* input[type="number"]:not(:placeholder-shown),  */
+input[type="number"]:valid, 
+input[type="text"]:valid {
+  outline: 2px solid #1ec00f;
+  box-shadow: 0 0 10px 2px #1ec00f, inset -3px -5px 10px #1ec00f;
+}
+
+
+input[type="number"]:out-of-range,
+input[type="text"]:invalid {
+  outline: 2px solid #de1010;
+  box-shadow: 0 0 10px 2px #de1010, inset -3px -5px 10px #de1010;
+  /* background-image: linear-gradient(to right bottom, #732f2f, #7e1111); */
+  /* background-color: #7e1111; */
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"]:placeholder-shown,
+input[type="text"]:placeholder-shown {
+  outline: none;
+  box-shadow: unset;
+}
+
+input {
+  caret: var(--text-clr);
+}
+
 
 .expense-tracker {
   display: flex;
@@ -36,9 +86,6 @@ main {
   gap: 32px;
 }
 
-.expense-form {
-  width: 100%;
-}
 
 .expense-table {
   width: 100%;
@@ -62,6 +109,7 @@ main {
 .title-column div,
 .amount-column div {
   display: flex;
+  align-items: center;
 }
 
 .expense-table .title-column .sort-title {
@@ -86,6 +134,131 @@ main {
   color: var(--text-clr);
   margin-right: auto;
 }
+
+.amount-column div div.filter-amount {
+  font-size: 12px;
+  padding: 5px 8px;
+  /* border: 0.5px solid #a3a3a375; */
+  background-color: var(--input-bg-clr);
+  border-radius: 2px;
+  margin: 0 15px 0 0;
+  cursor: pointer;
+  position: relative;
+}
+
+.amount-column div div.filter-amount:hover  {
+  background-color: #afdbaf29;
+  backdrop-filter: blur(25px);
+  transform: scale(1.2);
+}
+.filter-amount:hover .filter-container {
+  display: flex;
+}
+.filter-amount .filter-container {
+  display: none;
+  /* cursor: default; */
+  position: absolute;
+  inset: 100% -50% auto auto;
+  flex-direction: column;
+  /* height: 200px; */
+  width: 150px;
+  padding: 1.5rem 5px;
+  background-color: #aec4ae50;
+  backdrop-filter: blur(25px);
+  border: 0.5px solid #a3a3a375;
+  border-top: none;
+  border-radius: 3px;
+}
+.filter-amount .filter-container .clear-filter-btn {
+  position: absolute;
+  inset: 5px auto auto 5px;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 2px 5px;
+  border: 0.5px solid #ca2323;
+  color: #ca2323;
+  border-radius: 3px;
+  background-color: #e1e1e1eb;
+  cursor: pointer;
+}
+.filter-amount .filter-container .clear-filter-btn:hover {
+  transform: scale(0.95);
+}
+
+.filter-amount .filter-container .amount-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem 0;
+}
+
+.amount-input-wrapper input {
+  width: 80%;
+  margin-bottom: 8px;
+  padding: 5px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: var(--input-bg-clr);
+  color: var(--text-clr);
+  appearance: none;
+}
+.amount-input-wrapper input::placeholder {
+  color: var(--bg-clr);
+}
+
+
+.amount-input-wrapper input:valid,
+.amount-input-wrapper input:focus 
+{
+  outline: 1px solid #2fcd0b;
+  box-shadow: 0 0 10px 1px #35c614;
+}
+.amount-input-wrapper input:invalid {
+  outline: 1px solid #d91212;
+  box-shadow: 0 0 15px 3px #d91212;
+}
+.amount-input-wrapper input:placeholder-shown {
+  outline: none;
+  box-shadow: unset;
+}
+
+.amount-input-wrapper input:invalid ~ .search-btn {
+  display: none;
+}
+
+.amount-input-wrapper .search-btn {
+  display: inline-block;
+  padding: 3px 8px;
+  border: 1px solid;
+  background-color: transparent;
+  color: var(--text-clr);
+  border-radius: 3px;
+  cursor: pointer;
+}
+.amount-input-wrapper .search-btn:hover {
+  box-shadow: inset 0 0 10px 2px #c99fc9;
+}
+  
+  
+
+#select-amount {
+  width: 90%;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: var(--input-bg-clr);
+  color: var(--text-clr);
+  /* appearance: none; */
+}
+#select-amount option {
+  background-color: #52528a;
+}
+#select-amount option:checked {
+  background-color: #35c614;
+}
+#select-amount option:hover {
+  background-color: #8bdb8b;
+}
+
 
 .amount-column .arrow {
   transition: transform 0.2s ease-in-out;
@@ -119,40 +292,94 @@ main {
 .expense-table td {
   border: 1px solid #444;
   text-align: left;
-  padding: 4px 8px;
+  padding: 4px 0;
 }
+
+
+/*? expense form styling */
+.expense-form {
+  margin: 1rem auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem 0;
+}
+
+
 
 .input-container {
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  margin: 0.5rem auto;
-  box-shadow: 0 0 5px purple;
+  width: 90%;
+  height: 64px;
+  max-width: 450px;
+  margin: 0 auto;
+  /* box-shadow: 0 0 5px purple; */
   border-radius: 5px;
-  padding: 0.5rem 1rem;
+  /* padding: 0.5rem 1rem; */
+  background-color: var(--bg-clr);
+  border: 2px solid var(--input-bg-clr);
+  position: relative;
+  border-radius: 5px;
 }
-
-.input-container label {
-  /* font-size: 14px; */
-  font-weight: 600;
-  font-size: 18px;
+.input-container:focus-within {
+  border-color: #0fcbcb;
 }
 
 .input-container input {
-  height: 28px;
-  font-family: inherit;
-  background-color: var(--input-bg-clr);
-  color: var(--text-clr);
+  padding: 1.2rem 1rem;
   text-indent: 1rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  font-family: inherit;
+  /* background-color: var(--input-bg-clr); */
+  background-color: var(--bg-clr);
+  /* background-color: pink; */
+  color: var(--text-clr);
 }
 
-.input-container select {
-  padding: 0.5rem 1rem;
-  background-color: var(--input-bg-clr);
-  color: var(--text-clr);
+.input-container input:not(:focus) {
+  outline: none;
+  box-shadow: unset;
 }
-.input-container select option{
+
+.input-container label {
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1rem;
+  position: absolute;
+  inset: 1rem auto auto 2rem;
+  padding: 0 0.5rem;
+  background-color: inherit;
+  transition: inset 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.input-container input[type="number"]:not(:placeholder-shown) ~ label,
+.input-container input[type="text"]:not(:placeholder-shown) ~ label,
+.input-container select:is(:focus, :valid) ~ label ,
+.input-container input:is(:focus, :valid) ~ label {
+  inset: -0.5rem auto auto 1rem;
+}
+
+
+
+
+.input-container select {
+  padding: 1.2rem 1rem;
+  text-indent: 1rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  background-color: var(--bg-clr);
+  /* background-color: var(--input-bg-clr); */
+  color: var(--text-clr);
+  appearance: none;
+  /* background-color: pink; */
+}
+.input-container select option {
   background-color: var(--input-bg-clr);
+  background-color: #434378;
+  font-size: 1rem;
 }
 
 
@@ -232,10 +459,6 @@ main {
 }
 
 @media (max-width: 900px) {
-  body {
-      margin-inline: 16px;
-  }
-
   .expense-tracker {
       flex-direction: column;
   }
