--- a/track-your-expenses/src/index.css
+++ b/track-your-expenses/src/index.css
@@ -13,19 +13,19 @@
 
 body {
   font-family:  "Nunito", sans-serif;
+  background-color: #0e0a39;
 }
 
 #root {
   max-width: 1280px;
   width: 100%;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: var(--bg-clr);
   color: #fff;
 
   --text-clr: #f7f7f7;
-  --input-bg-clr: #7575a4;
+  --input-bg-clr: #72728f;
   --bg-clr: #0e0a39;
 }
 
