--- a/explore-nations-project/src/styles/CountryDetails.css
+++ b/explore-nations-project/src/styles/CountryDetails.css
@@ -1,14 +1,14 @@
 .country-details-container.dark {
-    --background-color: hsl(207, 26%, 17%); 
-    --text-color: white;
-    --elements-color: hsl(209, 23%, 22%);
+    --background-color: #202c37; 
+    --text-color: #e7e7e7;
+    --elements-color: #2b3945;
 }
 
 .country-details-container {
     max-width: 1200px;
     width: 100%;
     margin-inline: auto;
-    padding: 2rem 2rem 4rem;
+    padding: 2rem 0.5rem 4rem 1rem;
     color: var(--text-color);
     background-color: var(--background-color);
     z-index: -2;
@@ -17,40 +17,54 @@
 .back-button {
     padding: 0.5rem 2rem;
     width: max-content;
-    /* box-shadow: 0 0 4px 0px #1d0e0e33, 1px 1px 5px #d3d3d3; */
-    border-radius: 4px;
     font-weight: 700;
     font-size: 18px;
     cursor: pointer;
     position: relative;
-    background-color: #161a20;
-    color: #f0f0f0;
-    backface-visibility: visible;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.back-button::before {
-    content: "";
-    position: absolute;
-    /* inset: 0; */
-    z-index: -1;
-    height: 110%;
-    width: 105%;
-    background-image: linear-gradient(to bottom right, #008cff, #e100ff);
+    background-color: var(--background-color);
+    border: 2px solid var(--text-color);
+    color: var(--text-color);
     border-radius: 4px;
 }
 
+.back-button::before,
+.back-button::after {
+    content: "";
+    position: absolute;
+    z-index: 5;
+    height: 2px;
+    width: 20%;
+    background-color: var(--background-color);
+    border-radius: 4px;
+    transition: left 0.3s linear;
+}
+.back-button::before {
+    top: -2px;
+    left: 70%;
+}
+.back-button:hover::before {
+    left: 10%;
+    transform: scaleX(1.2);
+}
+
+.back-button::after {
+    bottom: -2px;
+    left: 10%;
+}
+.back-button:hover::after {
+    left: 70%;
+}
+    
+
 .country-details {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 64px;
     margin-top: 64px;
 }
 
 .country-details img {
-    width: 40%;
-    border: 1px solid #ddd;
+    width: 50%;
 }
 
 .details-text {
@@ -58,10 +72,13 @@
     flex-direction: column;
     row-gap: 12px;
     column-gap: 64px;
-    max-height: 180px;
-    flex-wrap: wrap;
+    overflow: hidden;
+    width: 100%;
 }
 
+.details-text p:first-child {
+    width: 100%;
+}
 .details-text p {
     margin: 0;
 }
@@ -72,48 +89,90 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 8px;
+    width: 100%;
 }
 
 .border-countries a {
     padding: 4px 16px;
-    box-shadow: 0 0 4px 0px #00000033, 1px 1px 5px #d3d3d3;
+    box-shadow: 0 0 4px #00000033, 1px 1px 5px #bbbbbb93;
     border-radius: 4px;
     font-size: 14px;
 }
 
+
+/*? Styling for country-details Shimmer UI  */
 .country-details.shimmerUI {
-    flex-wrap: wrap;
+    opacity: 1;
+    animation: shimmer 1s infinite linear alternate;
 }
-
-
-.country-details.shimmerUI span,
-.country-details.shimmerUI h1 {
-    padding: 1rem 0.5rem;
+.country-details.shimmerUI .details-text-container {
     width: 100%;
-    min-width: 150px;
-    max-width: 350px;
-    box-shadow: 0 0 5px lightblue, 1px 1px 5px #919191;
+}
+
+@keyframes shimmer {
+    to{ opacity: 0.5;}
+}
+
+.country-details.shimmerUI .shimmer-detail-text {
+    width: 100%;
+    display: flex;       
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.country-details.shimmerUI .shimmer-detail-text  span:nth-child(3) {
+    max-width: 280px;
+}
+.country-details.shimmerUI .shimmer-detail-text  span:nth-child(2n) {
+    max-width: 250px;
+}
+.country-details.shimmerUI .shimmer-detail-text  span:last-child {
+    max-width: 200px;
+}
+.country-details.shimmerUI .shimmer-detail-text  span,
+.country-details.shimmerUI h1 {
+    padding: 0.8rem 0.5rem;
+    width: 100%;
+    max-width: 300px;
+    box-shadow: 0 0 5px #86a2ab, 1px 1px 5px #787878;
     border-radius: 5px;
-    flex-shrink: 1;
+    background-color: #90adb76c;
 }
 
 .country-details.shimmerUI h1 {
-    padding: 1.25rem 0.5rem;
-    max-width: 400px;
-    margin-bottom: 1rem;
+    max-width: 350px;
+    padding: 1rem 0.5rem;
+    margin-bottom: 2rem;
 }
-/* .country-details.shimmerUI .details-text {
+.country-details.shimmerUI .details-text {
+
     flex-direction: row;
-} */
+}
 
 .country-details.shimmerUI .img {
     width: 100%;
     max-width: 450px;
     height: 300px;
-    /* border: 1px solid #aaaaaa; */
     box-shadow: 0 0 2px lightblue, 1px 1px 2px lightgray;
     border-radius: 5px;
-    background-color: rgba(144, 173, 183, 0.422);
+    background-color: #90adb76c;
+}
+
+
+@media(min-width: 1200px) {
+    .shimmer-detail-text {
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 180px;
+        gap: 1rem 2rem;
+    }
+
+    .country-details.shimmerUI .details-text-container  h1 {
+        padding: 1.2rem;
+    }
+    .country-details.shimmerUI .shimmer-detail-text  span {
+        padding: 0.9rem 1rem;
+    }
 }
 
 
@@ -121,14 +180,30 @@
     .country-details {
         flex-direction: column;
         align-items: flex-start;
-        margin-top: 32px;
-        gap: 16px;
+        margin-top: 3rem;
+        gap: 2rem;
     }
+
+     .back-button {
+        padding: 0.25rem 1rem;
+        font-size: 1rem;
+    }
+
+    .back-button::before,
+    .back-button::after {
+        width: 10%;
+        transition: left 0.3s linear;
+    }
+
+    .back-button::before,
+    .back-button:hover::after {
+        left: 80%;
+    }
+
+
+    
     .country-details.shimmerUI {
-        flex-direction: column;
-        align-items: flex-start;
-        margin-top: 32px;
-        gap: 16px;
+        gap: 2rem;
     }
 
     .details-text {
@@ -140,4 +215,65 @@
         max-width: 400px;
     }
 
+    .country-details.shimmerUI .shimmer-detail-text  span,
+    .country-details.shimmerUI h1 {
+        max-width: 350px;
+    }
+    .country-details.shimmerUI .shimmer-detail-text {
+        width: 100%;
+        display: flex;  
+        flex-direction: column;     
+        flex-wrap: nowrap;
+    }
+    
+}
+
+
+
+
+@media (max-width:768px) {
+    .country-details-container {
+        padding: 2rem 0.5rem 4rem;
+    }
+
+    .country-details.shimmerUI img {
+        width: 60%;
+    }
+    
+    .country-details.shimmerUI .shimmer-detail-text  span {
+        padding: 0.85rem ;
+    }
+    
+    
+}
+
+
+@media (max-width:500px) {
+    .country-details-container {
+        padding: 2rem 0.25rem 4rem;
+    }
+
+    .country-details.shimmerUI img {
+        width: 70%;
+        border: 1px solid #ddd;
+    }
+    
+
+
+    .country-details.shimmerUI .shimmer-detail-text  span {
+        max-width: 60%;
+        padding: 0.7rem 1rem;
+    }
+    .country-details.shimmerUI .shimmer-detail-text  span:nth-child(2n) {
+        max-width: 80%;
+
+    }
+    .country-details.shimmerUI .shimmer-detail-text  span:nth-child(3) {
+        max-width: 50%;
+    }
+    .country-details.shimmerUI h1 {
+        max-width: 90%;
+    }
+    
+    
 }
