--- a/track-your-expenses/src/index.css
+++ b/track-your-expenses/src/index.css
@@ -20,7 +20,7 @@ body {
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 0.5rem;
   text-align: center;
   color: #fff;
 
