--- a/indic_food/index.css
+++ b/indic_food/index.css
@@ -18,7 +18,14 @@ body {
   column-gap: 10px;
   margin-top: 120px;
   padding: 10px;
+  animation: shimmer infinite 1s ease-in-out alternate;
 }
+@keyframes shimmer {
+  to {
+    opacity: 0.3;
+  }
+}
+
 .shimmerCardBox {
   width: 300px;
   background-color: #90e4fc6f;
@@ -35,7 +42,7 @@ body {
 .shimmerCardBox .ShimmerBannerBox {
   position: relative;
 }
-.shimmerCardBox .ShimmerBannerBox img {
+.shimmerCardBox .ShimmerBannerBox .img {
   border-radius: 10px;
   width: 100%;
   height: 250px;
